--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "nuxt": "^3.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "@mdi/font": "^7.1.96",
+    "sass": "^1.57.1",
+    "vuetify": "^3.1.1"
   }
 }
